syntax = "proto3";

package snake_game;

service SnakeGameService {
    rpc GameStream(stream ClientMessage) returns (stream ServerMessage);
}

message ClientMessage {
    oneof message {
        ConnectRequest connect = 10;
        DisconnectRequest disconnect = 11;
        ListLobbiesRequest list_lobbies = 12;
        CreateLobbyRequest create_lobby = 13;
        JoinLobbyRequest join_lobby = 14;
        LeaveLobbyRequest leave_lobby = 15;
        MarkReadyRequest mark_ready = 16;
        StartGameRequest start_game = 17;
        PlayAgainRequest play_again = 18;
        TurnCommand turn = 19;
        AddBotRequest add_bot = 20;
        KickFromLobbyRequest kick_from_lobby = 21;
        PingRequest ping = 22;
    }
}

message ServerMessage {
    oneof message {
        LobbyListResponse lobby_list = 10;
        LobbyUpdateNotification lobby_update = 11;
        PlayerJoinedNotification player_joined = 12;
        PlayerLeftNotification player_left = 13;
        PlayerReadyNotification player_ready = 14;
        GameStartingNotification game_starting = 15;
        LobbyListUpdateNotification lobby_list_update = 16;
        LobbyClosedNotification lobby_closed = 17;
        PlayAgainStatusNotification play_again_status = 18;
        GameStateUpdate state = 19;
        GameOverNotification game_over = 20;
        ErrorResponse error = 21;
        ServerShuttingDownNotification server_shutting_down = 22;
        PongResponse pong = 23;
    }
}

message ConnectRequest {
    string client_id = 1;
}

message DisconnectRequest {}

message ListLobbiesRequest {}

message CreateLobbyRequest {
    string lobby_name = 1;
    uint32 max_players = 2;
    LobbySettings settings = 3;
}

message JoinLobbyRequest {
    string lobby_id = 1;
}

message LeaveLobbyRequest {}

message MarkReadyRequest {
    bool ready = 1;
}

message StartGameRequest {}

message PlayAgainRequest {}

message AddBotRequest {
    BotType bot_type = 1;
}

message KickFromLobbyRequest {
    string player_id = 1;
}

message PingRequest {
    uint64 ping_id = 1;
    uint64 client_timestamp_ms = 2;
}

message PongResponse {
    uint64 ping_id = 1;
    uint64 client_timestamp_ms = 2;
}

message LobbyListResponse {
    repeated LobbyInfo lobbies = 1;
}

message LobbyInfo {
    string lobby_id = 1;
    string lobby_name = 2;
    uint32 current_players = 3;
    uint32 max_players = 4;
}

message LobbyUpdateNotification {
    LobbyDetails lobby = 1;
}

message LobbyDetails {
    string lobby_id = 1;
    string lobby_name = 2;
    repeated PlayerInfo players = 3;
    uint32 max_players = 4;
    LobbySettings settings = 5;
    PlayerIdentity creator = 6;
}

message PlayerInfo {
    PlayerIdentity identity = 1;
    bool ready = 2;
}

message LobbySettings {
    uint32 field_width = 1;
    uint32 field_height = 2;
    WallCollisionMode wall_collision_mode = 3;
    uint32 tick_interval_ms = 4;
}

enum WallCollisionMode {
    WALL_COLLISION_MODE_UNSPECIFIED = 0;
    WALL_COLLISION_MODE_DEATH = 1;
    WALL_COLLISION_MODE_WRAP_AROUND = 2;
}

enum BotType {
    BOT_TYPE_UNSPECIFIED = 0;
    BOT_TYPE_EFFICIENT = 1;
    BOT_TYPE_RANDOM = 2;
}

message PlayerIdentity {
    string player_id = 1;
    bool is_bot = 2;
    BotType bot_type = 3;
}

message PlayerJoinedNotification {
    PlayerIdentity identity = 1;
}

message PlayerLeftNotification {
    PlayerIdentity identity = 1;
}

message PlayerReadyNotification {
    PlayerIdentity identity = 1;
    bool ready = 2;
}

message GameStartingNotification {
    string session_id = 1;
}

message LobbyListUpdateNotification {}

message ServerShuttingDownNotification {
    string message = 1;
}

message LobbyClosedNotification {
    string message = 1;
}

message PlayAgainStatusNotification {
    oneof status {
        PlayAgainNotAvailable not_available = 1;
        PlayAgainAvailable available = 2;
    }
}

message PlayAgainNotAvailable {}

message PlayAgainAvailable {
    repeated PlayerIdentity ready_players = 1;
    repeated PlayerIdentity pending_players = 2;
}

message ErrorResponse {
    string message = 1;
}

message TurnCommand {
    Direction direction = 1;
}

enum Direction {
    DIRECTION_UNSPECIFIED = 0;
    UP = 1;
    DOWN = 2;
    LEFT = 3;
    RIGHT = 4;
}

message GameStateUpdate {
    uint64 tick = 1;
    repeated Snake snakes = 2;
    repeated Position food = 3;
    uint32 field_width = 4;
    uint32 field_height = 5;
}

message Snake {
    PlayerIdentity identity = 1;
    repeated Position segments = 2;
    bool alive = 3;
    uint32 score = 4;
}

message Position {
    int32 x = 1;
    int32 y = 2;
}

message GameOverNotification {
    repeated ScoreEntry scores = 1;
    PlayerIdentity winner = 2;
    GameEndReason reason = 3;
}

message ScoreEntry {
    PlayerIdentity identity = 1;
    uint32 score = 2;
}

enum GameEndReason {
    GAME_END_REASON_UNSPECIFIED = 0;
    GAME_END_REASON_WALL_COLLISION = 1;
    GAME_END_REASON_SELF_COLLISION = 2;
    GAME_END_REASON_SNAKE_COLLISION = 3;
    GAME_END_REASON_PLAYER_DISCONNECTED = 4;
    GAME_END_REASON_GAME_COMPLETED = 5;
}
